use use-cases in controller
