# build/swagger.json
@@ -36,30 +36,15 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_Book.Exclude_keyofBook.title-or-summary__": {
-				"properties": {
-					"id": {
-						"type": "string"
-					},
-					"author": {
-						"type": "string"
-					},
-					"totalPages": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"id",
-					"author",
-					"totalPages"
-				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
+			"BookIdParam": {
+				"type": "string"
 			},
 			"CreateBookInput": {
 				"properties": {
-					"id": {
+					"title": {
+						"type": "string"
+					},
+					"summary": {
 						"type": "string"
 					},
 					"author": {
@@ -71,15 +56,13 @@
 					}
 				},
 				"required": [
-					"id",
+					"title",
+					"summary",
 					"author",
 					"totalPages"
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"GetBookIdParams": {
-				"type": "string"
 			}
 		},
 		"securitySchemes": {}
@@ -175,7 +158,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/BookIdParam"
 						}
 					}
 				]
@@ -199,7 +182,7 @@
 						"name": "id",
 						"required": true,
 						"schema": {
-							"$ref": "#/components/schemas/GetBookIdParams"
+							"$ref": "#/components/schemas/BookIdParam"
 						}
 					}
 				]
